<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUp"
    android:background="@color/white">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/signup"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp" />
    <EditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:textColor="@color/black"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        android:padding="20dp"
        android:textColorHint="@color/black" />
    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:textColor="@color/black"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/edt_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/enter_phone"
        android:inputType="phone"
        android:padding="20dp"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/edt_re_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        android:layout_marginEnd="30dp"
        android:hint="@string/reenter_password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColorHint="@color/black" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:backgroundTint="@color/blue"
        android:textColor="@color/black"
        android:text="@string/signup" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:text="@string/existing"/>
    <Button
        android:id="@+id/btn_login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:backgroundTint="@color/blue"
        android:layout_marginBottom="30dp"
        android:textColor="@color/black"
        android:text="@string/login" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>