<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:backgroundTint="@color/white"
    android:padding="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from_currency"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/fromCurrencyView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from_currency"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_currency"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/toCurrencyView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_currency"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_amount"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/amountView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_amount"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result"
                android:textSize="16sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/resultView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result"
                android:textSize="16sp"
                android:textColor="@color/black"/>

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:backgroundTint="@color/blue"
                android:layout_marginStart="30dp"
                android:text="@string/delete"
                android:textColor="@color/black" />
        </TableRow>
    </TableLayout>

</androidx.cardview.widget.CardView>
